﻿# DotnetToolbar 0.2.48 Release Notes
Release Date: 2024-01-14

## New
- Added a try catch in solution after open event to observe behavior noticed with dotnet templates.

# DotnetToolbar 0.2.47 Release Notes
Release Date: 2023-12-02

## New
- Added a "dotnet menu" submenu to facilitate the creation of a global.json file at the solution level. This explicitly sets the dotnet SDK version used by the solution.

# DotnetToolbar 0.2.46 Release Notes
Release Date: 2023-11-26

## New
- Added a button "Add local package source" to the nuget push dialog. Creates a nuget file repo in %userprofile%\source\packages.

# DotnetToolbar 0.2.45 Release Notes
Release Date: 2023-11-26

## New
- Added dotnet test

# DotnetToolbar 0.2.42 + 0.2.43 + 0.2.44 Release Notes
Release Date: 2023-11-23

## Enhancements
- Version update, to reupload description in marketplace.

# DotnetToolbar 0.2.41 Release Notes
Release Date: 2023-11-23

## Bugfix
- del bin/obj restore, added non sdk block

# DotnetToolbar 0.2.40 Release Notes
Release Date: 2023-11-23

## Bugfix
- dotnet nuget push, fixed datetime, changed from utc to local
- dotnet nuget push, fixed version parsing regex and sorting

# DotnetToolbar 0.2.39 Release Notes
Release Date: 2023-11-23

## New
- Implemented "del bin/obj restore".
- Changed default folder for saving the settings.

# DotnetToolbar 0.2.38 Release Notes
Release Date: 2023-11-22

## Bug Fixes
- Implemented enhanced validation for empty solutions to prevent issues during processing.
- Refined the parsing mechanism for projects within solutions, ensuring more accurate and efficient handling

# DotnetToolbar 0.2.37 Release Notes
Release Date: 2023-10-31

## Bug Fixes
- Changed settings defaults.

# DotnetToolbar 0.2.36 Release Notes
Release Date: 2023-10-30

## Bug Fixes
- TryReadFromFile backup, changed display of extension directory.

# DotnetToolbar 0.2.35 Release Notes
Release Date: 2023-10-30

## Bug Fixes
- Missing GUID in DTE properties in newly created projects.
